--- a/webstyle.css
+++ b/webstyle.css
@@ -657,3 +657,19 @@ nav span {
   top: 0;
   left: 0;
 }
+
+
+
+button, input, .contact-form input, .contact-form textarea {
+  width: 100%;
+  max-width: 400px;
+  margin: 10px auto;
+  display: block;
+}
+
+@media (max-width: 768px) {
+  button {
+    font-size: 16px;
+    padding: 10px 20px;
+  }
+}
