--- a/webstyle.css
+++ b/webstyle.css
@@ -635,19 +635,6 @@ nav span {
 }
 
 
-.video-container {
-  position: relative;
-  width: 100%;
-  height: 100vh;
-  overflow: hidden;
-}
-
-#bg-video {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
 .fallback-image {
   display: none;
   width: 100%;
@@ -672,4 +659,19 @@ button, input, .contact-form input, .contact-form textarea {
     font-size: 16px;
     padding: 10px 20px;
   }
+}
+.video-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100%;
+  overflow: hidden;
+  z-index: -1;
+}
+
+#bgVideo {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
