--- a/webstyle.css
+++ b/webstyle.css
@@ -18,7 +18,7 @@ body {
 /* Light Mode */
 body.light-mode {
   --bg-color: #f4f4f4;
-  --text-color: #ffffff;
+  --text-color:#000000;
   --card-bg: #ddd;
 }
 
